Fixed title gaps on mobile

--- a/src/assets/home/scss/home.scss
+++ b/src/assets/home/scss/home.scss
@@ -240,8 +240,8 @@
                     padding: 4rem 3rem;
 
                     span {
-                        display: inline;
-                        margin-bottom: 0;
+                        display: inline !important;
+                        margin-bottom: 0 !important;
                     }
 
                     b {
